# ahgd

./: .coverage  .coverage.massimos-MacBook-Pro.local.57564.XJGvihIx  .dvcignore  .env  .env.example  .env.template  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG_DATA.md  CLAUDE.md  CLOUD_DATA_STRATEGY.md  CODEBASE_REVIEW_2025-11-05.md  CODESPACES_GUIDE.md  COMPREHENSIVE_PROJECT_WALKTHROUGH.md  COMPREHENSIVE_TESTING_REPORT_SECURITY_FIXES.md  CONTRIBUTING.md  CRITICAL_FIXES_2025-11-05.md  DATA_ARCHITECTURE.md  DATA_PIPELINE_INVESTIGATION_REPORT.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.api  Dockerfile.streamlit  Dockerfile.v3  GEMINI.md  GITHUB_DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PHASE_1_COMPLETION_REPORT.md  PHASE_5_3_COMPLETION_REPORT.md  PIPELINE_FIX_RECOMMENDATIONS.md  PLANNING.md  PORTFOLIO_SUMMARY.md  PRODUCTION_VALIDATION_REPORT.md  PROJECT_STRUCTURE.md  Personal_Health_Data_Project_Plan.md  QUICK_START.md  (+104 more)
.claude/commands/: organise.md  review.md
.devcontainer/: devcontainer.json  setup.sh
.dvc/: config
.github/: CODEOWNERS  README.md  dependabot.yml  pull_request_template.md
.serena/: project.yml
ahgd_dbt/: dbt_project.yml  profiles.yml
ahgd_etl/: __init__.py  utils.py
analytics/: __init__.py
configs/: default.yaml  development.yaml  logging_config.yaml  migration_config.yaml  production.yaml  schema_validation.yaml  testing.yaml  version_compatibility.yaml
dags/: ahgd_pipeline.py  ahgd_pipeline_v2.py
dashboards/: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  config.py  docker-compose.yml  requirements.txt
data/: processed.dvc  raw.dvc
data_exports/: export_summary_report.md
data_processed/: .gitkeep
data_raw/: .gitkeep
data_release/: LICENSE  README.md  data_dictionary.json  database_info.json  geospatial_info.json  processed_data_info.json  sample_aihw_grim_data.csv  sample_aihw_mort_table1.csv  sample_phidu_pha_data.csv  sample_seifa_2021_sa2.csv
docs/: DATABASE_SCHEMA_VISUAL_GUIDE.md  DATA_ANALYST_TUTORIAL.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_SUMMARY.md  ENHANCED_GEOGRAPHIC_VALIDATOR_SUMMARY.md  GITHUB_PAGES_DEPLOYMENT_GUIDE.md  INDEX.md  KNOWN_ISSUES_AND_LIMITATIONS.md  LOGGING_FRAMEWORK_README.md  Makefile  ORGANIZATION_SUMMARY.md  PHASE_5_COMPLETION_REPORT.md  PRODUCTION_VALIDATION_REPORT.md  PROJECT_NAVIGATION.md  PROJECT_PLAN.md  QUICK_START_GUIDE.md  README.md  README_TEMPLATE.md  READY_TO_DEPLOY.md  SAMPLE_VS_PRODUCTION.md  SCHEMA_VERSIONING_IMPLEMENTATION_SUMMARY.md  ULTRA_DATABASE_ARCHITECTURE_ANALYSIS.md  WEB_EXPORT_STRATEGY.md  attribution_and_disclaimer_requirements.md  data_quality_validation_standards.md  deployment_guide.md  enhanced_data_portal.html  health_inequality_analysis.html  index.html  legal_compliance_assessment_report.md  logging_examples.py  make.bat  manifest.json  phase_5_compliance_and_quality_assessment_summary.md  production_deployment_compliance_checklist.md  robots.txt  sitemap.xml  sw.js  ultra_dashboard.html
documentation/: configuration_guide.md  etl_data_model_diagram.md  etl_outputs.md  hardcoded_values_audit.md  rule_workflow_consolidation.md
etl_logic/: __init__.py  census.py  census.py-e  config.py  dimensions.py  geography.py  time_dimension.py  utils.py  validation.py
examples/: advanced_statistical_validation_example.py
macros/: data_quality_checks.sql
memory-bank/: activeContext.md  all_census_tables_metadata.md  census_file_structure_analysis.md  dataStructures.md  data_validation_framework.md  futureTables.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
models/: sources.yml
output/: data_schema.mmd  dim_demographic.parquet  dim_health_condition.parquet  dim_person_characteristic.parquet  dim_time.parquet  geo_dimension.parquet
pipelines/: census_pipeline.yaml  master_pipeline.yaml  orchestrator.py
reports/: INDEX.md
schemas/: __init__.py  base_schema.py  census_schema.py  config_schema.yaml  environmental_schema.py  health_schema.py  integrated_schema.py  mortality_schema.py  quality_standards.py  sa1_schema.py  sa2_schema.py  seifa_schema.py  target_outputs.py
scripts/: INDEX.md  README.md  architecture_status.py  automated_quality_monitoring.py  comprehensive_data_analysis.py  data_investigation.py  data_quality_fixes.py  demo_memory_optimization.py  deploy_to_huggingface.py  direct_urls.py  download_sample_data.py  extract_g21_metadata.py  generate_profiling_reports.py  generate_web_exports.py  launch_portfolio.py  metadata_g21.py  migrate_to_parquet.py  output_schema_extractor.py  performance_optimization.py  performance_summary.py  prepare_data_release.py  run_data_documentation.py  run_data_quality_tests.py  run_integration_tests.py  run_unified_etl.py  simulate_deployment.py  test_g17_g18_processing.py  verify_deployment.py
snowflake/: config.example.json  create_all_tables.sql
src/: __init__.py  cli.py  config.py  main.py
stories/: task-1.1.md  task-1.3.md  task-1.4.md  task-2.1.md  task-2.3.md
streamlit_app/: main.py
tests/: README.md  README_TDD_REAL_DATA_TESTS.md  TEST_FRAMEWORK_DOCUMENTATION.md  __init__.py  conftest.py  test_automation_suite.py  test_boundary_integration.py  test_boundary_processor.py  test_census.py  test_config.py  test_data_loaders.py  test_data_processors.py  test_dimensions.py  test_g21_processing.py  test_geography.py  test_health_integration.py  test_health_risk_calculator.py  test_incremental_processing.py  test_integration_comprehensive.py  test_memory_optimization.py  test_performance_benchmarks.py  test_performance_comprehensive.py  test_phase3_integration.py  test_real_data_runner.py  test_real_data_sources.py  test_real_downloader.py  test_run_etl.py  test_scripts_comprehensive.py  test_seifa_implementation.py  test_seifa_integration.py  test_seifa_processor.py  test_storage_optimization.py  test_time_dimension.py  test_utils.py  test_validation.py  test_visualisation_charts.py  test_visualisation_components.py  test_visualisation_maps.py  test_visualization_comprehensive.py
(+702 files in other folders)
