[project]
name = "ahgd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.3.1",
    "folium>=0.20.0",
    "geopandas>=1.1.0",
    "httpx>=0.28.1",
    "polars[all]>=1.30.0",
    "rich>=13.9.4",
    "streamlit>=1.45.1",
    "typer>=0.16.0",
]
